audela/src/include/absimple.h

   extern "C" ABSIMPLE_API abcommon::IIntArray* IProducerPool_getIntanceNoList();
   /**
   @brief Create an instance of Station type from a string.
   @param home (formated as GPS abs(longitude_deg) E|W latitude_deg altitude_m)
   @return Pointer IStation 
   @code {.cpp}
   Ihome *home = abmc::IStation_createInstance_from_string("GPS 2 E 43 1345");
   ...
   IStation_releaseInstance(home); 
   @endcode
   */
   extern "C" ABSIMPLE_API IStation*         IStation_createInstance();
   extern "C" ABSIMPLE_API IStation*         IStation_createInstance_from_string(const char *home);
   extern "C" ABSIMPLE_API IStation*         IStation_createInstance_from_string2(const char * home, Sense sense);
   extern "C" ABSIMPLE_API void              IStation_deleteInstance(IStation* home);
   extern "C" ABSIMPLE_API const char *      IStation_get_GPS(IStation *home, Frame frame);
   extern "C" ABSIMPLE_API Sense::Values     IStation_getSense(IStation *home);