audela/astrobrick/python/absimple.py

	
def Producer_getItemNoList():
	clist = _absimple.IProducerPool_getIntanceNoList()
	checkError()
	return copyToArray(clist)

#==============================================================================
# Station class
#==============================================================================

import enum 
class CtypesIntEnum(enum.IntEnum):

	def __new__(cls):
		print("new cls=", type(cls) )
		value = len(cls.__members__) 
		obj = int.__new__(cls)
		obj._value_ = value
		print("new cls type(obj)=", type(obj) , "value=", value )
		return obj
	
#	@classmethod
#	def __init__(self, *args):
#		argc = len(args)
#		if len(args) == 1:
#			print("new __init__type=", type(self) )
#			print( "CtypesIntEnum=", args[0] )
#			self._as_parameter = int(args[0])
		
	
	@classmethod
	def from_param(cls, obj):
		print("from_param=", type(cls) , "obj=",obj, "type(obj)=",type(obj), "int(obj)=", int(obj) )
		#--- see https://docs.python.org/3.3/library/ctypes.html?highlight=cdll#data-types
		if not isinstance(obj, cls):
			message = "value %s is not %s" % (obj,cls)
			#raise IError( 104, message.encode('utf8') )
			raise TypeError(message )
		return int(obj.value)
	
def _Types_parser(cls, value):
	if not isinstance(value, int):
		print("==Types_parser=", type(cls) , "value=",value)
		return super(num.Enum, cls).__new__(cls, value)
	else:
		# https://github.com/python/cpython/blob/master/Lib/enum.py
		print("==Types_parser=", type(cls) , "type(value)=", type(value), "value=", value )
		#value = len(cls.__members__) + 1
		#obj = int.__new__(cls)
		#obj._value_ = value
		#return obj
		return list(cls._member_map_.values())[value]
		#return list(cls.__members__.items())[value]

setattr(enum.Enum, '__new__', _Types_parser)
	
	
class Sense(CtypesIntEnum):
	EAST = ()
	WEST = ()

class Frame(CtypesIntEnum):
	TRF = ()
	CRF = ()

print("members=", Sense.__members__)
print("__iter__=", Sense.__iter__)



_absimple.IStation_get_GPS.restype = ctypes.c_char_p
_absimple.IStation_get_GPS.argtypes = [ctypes.c_void_p, Frame]
_absimple.IStation_createInstance_from_string2.argtypes = [ctypes.c_void_p, Sense]
_absimple.IStation_getSense.restype = Sense
class Station(object):
	def __init__(self, *args): 
		argc = len(args)
		if argc==0:
			this = _absimple.IStation_createInstance()
			checkError()
		elif argc==1 :
			this = _absimple.IStation_createInstance_from_string(args[0].encode('utf8'))
			checkError()
		elif argc==2 :
			print( "args[1]=", args[1])
			this = _absimple.IStation_createInstance_from_string2(args[0].encode('utf8'), args[1])
			checkError()
		else: 
			raise IError( 104, "Station(args) invalid args number".encode('utf8'))
		try: self.this.append(this)
		except: self.this = this		
	def __del__(self): 
		if hasattr(self,'this'):
			_absimple.IStation_deleteInstance(self.this)
			checkError()
	def get_GPS(self, frame):
		result = _absimple.IStation_get_GPS(self.this, frame)
		checkError()
		return result.decode('utf8')
	def getSense(self):
		result = _absimple.IStation_getSense(self.this)
		checkError()
		return result

